# vastpy

./: CHANGELOG.md  README.md  pyproject.toml
tests/: README.md  __init__.py  run_tests.py  test_simple.py
vastpy/: __init__.py  cli.py
