[tool.poetry]
name = "vastpy"
version = "0.3.15"
description = ""
authors = ["Alon Horev <alon@vastdata.com>"]
readme = "README.md"

[tool.poetry.scripts]
vastpy-cli = "vastpy.cli:main"

[tool.poetry.dependencies]
python = "^3.6"
urllib3 = "^1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
